# LoggingServiceVaccum

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  Main.cpp  Physic.cpp  Physic.hpp  Pizza.cpp  Pizza.hpp  main.cpp  physic.cpp  simulation.cpp  simulation.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  main_test.cpp
